--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   },
   "homepage": "https://github.com/fython/userscript-enhance-bilibili-player#readme",
   "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-transform-runtime": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.3",
@@ -31,6 +35,7 @@
     "webpack-userscript": "^2.5.1"
   },
   "dependencies": {
+    "@babel/runtime": "^7.9.2",
     "jquery": "^3.4.1"
   }
 }
