--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Enhance Bilibili Player experience",
   "main": "src/index.js",
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack --config build/webpack.config.js",
-    "dev": "cross-env NODE_ENV=development LOCAL_DEV=1 webpack-dev-server --debug --watch --config build/webpack.config.js"
+    "build:settings": "cross-env NODE_ENV=production webpack --config build/webpack.settings.config.js",
+    "build:userscript": "cross-env NODE_ENV=production webpack --config build/webpack.userscript.config.js",
+    "dev:settings": "cross-env NODE_ENV=development LOCAL_DEV=1 webpack-dev-server --debug --watch --config build/webpack.settings.config.js",
+    "dev:userscript": "cross-env NODE_ENV=development LOCAL_DEV=1 webpack-dev-server --debug --watch --config build/webpack.userscript.config.js"
   },
   "repository": {
     "type": "git",
@@ -27,8 +29,18 @@
     "@babel/preset-env": "^7.9.0",
     "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
+    "css-loader": "^3.4.2",
+    "deepmerge": "^4.2.2",
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.3",
+    "fibers": "^4.0.2",
+    "html-webpack-plugin": "^4.0.1",
+    "sass": "^1.26.3",
+    "sass-loader": "^8.0.2",
+    "vue-loader": "^15.9.1",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.4.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.3",
@@ -36,6 +48,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.9.2",
-    "jquery": "^3.4.1"
+    "jquery": "^3.4.1",
+    "vue": "^2.6.11",
+    "vuetify": "^2.2.18"
   }
 }
