--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "userscript-enhance-bilibili-player",
   "private": true,
-  "version": "0.0.0",
+  "version": "2.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -16,6 +16,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "typescript": "^4.9.4",
+    "unplugin-auto-import": "^0.12.2",
+    "unplugin-vue-components": "^0.22.12",
     "vite": "^4.0.4",
     "vite-plugin-monkey": "^2.11.0",
     "vue-tsc": "^1.0.24"
